--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
     "vary": "^1.1.0",
     "wordwrap": "^0.0.3",
     "node-xlsx": "^0.24.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "node-xlsx": "^0.24.0",
+    "jsonwebtoken": "^8.3.0",
+    "cors": "^2.8.5",
   },
   "scripts": {
     "start": "node app.js",
