--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "fs": "^0.0.1-security",
     "node-xlsx": "^0.24.0",
     "jsonwebtoken": "^8.3.0",
-    "cors": "^2.8.5",
+    "cors": "^2.8.5"
   },
   "scripts": {
     "start": "node app.js",
