--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
     },
     "app": {
         "apiPrefix" : "",
-        "url": "https://cai-tripsy-bot.onrender.com"
+        "url": "https://esi-ca-kore-ai-botkit-verbiage.onrender.com"
     },
     "validations": {
         "leastNodeVersion": 10
